log/build_2023-10-30_12-33-04/mob_rob_loca/stderr.log
  File "/home/coderey/ros2_ws/install/mob_rob_loca/lib/python3.8/site-packages/mob_rob_loca/nav_waypoints.py", line 40
    robot1 = Robot(robot_type=Robot.Type.TRANSPORTER, state=Robot.State.STANDBY goals=[], empty=True, current_pose=PoseStamped())
                                                                                ^
SyntaxError: invalid syntax

